--- a/mySite.html
+++ b/mySite.html
@@ -10,7 +10,7 @@
 <body>
 	<h1>Akshita sharma</h1>
 	<body style="background:white">
-		<img src="images/me.jpg" width="250" height="300" alt="Akshita sharma">
+		<img src="images/me.jpg" width="250px" height="300px" alt="Akshita sharma">
 	<br>
 	hi! i'm here to tell you about my traelling experience.
 	<br>
