--- a/mySite.html
+++ b/mySite.html
@@ -4,13 +4,13 @@
 	<meta charset="UTF-8">
 	<title>come lets travel</title>
 	<a href="https://www.facebook.com/profile.php?id=100004934130226">About</a>
-	&nbsp
+	&nbsp;
 	<a href="trial.html">italy</a>
 </head>
 <body>
 	<h1>Akshita sharma</h1>
-	<body style="background:white">
-		<img src="images/me.jpg" width="250px" height="300px" alt="Akshita sharma">
+
+		<img src="images/me.jpg" width="400" height="500" alt="Akshita sharma">
 	<br>
 	hi! i'm here to tell you about my traelling experience.
 	<br>
